refactor(architecture): extract domain use cases and adapter boundaries
add merchantops-domain services, use cases, and ports for auth, user, ticket, audit, approval, import, and ai interaction flows

reorganize merchantops-api by bounded-context packages and wire domain use cases through DomainUseCaseConfig

move persistence integrations into merchantops-infra adapters and remove the legacy merchantops-common module

add architecture boundary tests, java style guidance, checkstyle, and updated architecture docs for the new module layout